--- a/views/register.html
+++ b/views/register.html
@@ -67,7 +67,7 @@
                 <label for="nombre">Password</label>
                 <input type="password" name="password" id="password" required>
             </p>
-            <input type="submit" value="Enviar">
+            <a href="/"><bottom type= "bottom">Enviar</bottom></a>
             </form>
     </main>
 </body>
