--- a/public/css/styles.rgtr.css
+++ b/public/css/styles.rgtr.css
@@ -5,31 +5,71 @@
     box-sizing: border-box;
 }
 
-body{
+body {
     background-color: #EAC926;
     font-family: 'Roboto', sans-serif;
 }
 
-div .logo {
-    width: 10px;
+header{
+    height: 90px;
 }
 
-div .formulario-de-registro {
-    justify-content: center;    
-    padding: 10px;
+.logo {
+    width: 40%;
+    padding-top: 10px;
+}
+
+h1 {
+    
+    text-align: center;
+    font-style: bold;
+}
+
+h3.titulo {
+    padding: 15px;
+    font-style: normal;
+    font-weight: bold;
+    background-color: #EAC926;
+    
+}
+
+.formulario-de-registro {
+    background-color: #ebebeb;
+    padding: 10px 5px 10px 5px;
+    margin: 20px 30px;
+    border-radius: 3%;
+
+}
+
+.perfil-del-usuario {
+    display: flex;
+    flex-direction: column;
+    background-color: #ebebeb;
+    padding: 10px 5px 10px 5px;
+    margin: 20px 30px;
+    border-radius: 3%;
 }
 
 .elegir {
     display: flex;
     flex-direction: column;
+    text-align: left;
+    font-size: 16px;
 }
+
+.checkbox {
+    display: contents;
+    flex-wrap: wrap;
+}
+
+/* Tablet */
 
 @media (min-width: 576px){
-    /* Tablet */
 
 }
 
+/* Desktop */ 
+
 @media (min-width: 992px){
-    /* Desktop */
 
 }
