--- a/views/register.html
+++ b/views/register.html
@@ -76,8 +76,13 @@
             <input type="checkbox" name="intereses" value="intereses">Jugueteria
             <input type="checkbox" name="intereses" value="intereses">Vida sana
         </section>
+        <div>
+            <p>
+            <h3 class="titulo">Contraseña</h3>
+            </p>
+        </div>
         <p>
-            <label for="nombre">Password</label>
+            <label for="password">password</label>
             <input type="password" name="password" id="password" required>
         </p>
         <a href="/">
