--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -86,14 +86,14 @@ header nav {
     justify-content: flex-start;
     height: 20px;
     display: none;
-    
+
 }
 
 .nav-header-menu {
     height: 20px;
     display: none;
     padding-right: 15px;
-    
+
 }
 
 ul li {
@@ -155,11 +155,11 @@ article {
 .leyenda-articulo {
     display: flex;
     padding: 30px;
-    justify-content:flex-start;
+    justify-content: flex-start;
     border: 1.5px solid #666;
     width: 100%;
     position: relative;
-    
+
 }
 
 .camion {
@@ -169,14 +169,18 @@ article {
     width: 32px;
     height: 30px;
     border: 10px solid #39b54a;
-    background-color: #FFF;
+    color: #39b54a background-color: #FFF;
     border-radius: 90%;
     position: absolute;
     right: 20px;
     top: -15px;
     border-width: 3px;
     align-items: center;
-    
+}
+
+.camion:focus {
+    transform: rotateX(90deg);
+    transition: width 2s, height 5s;
 }
 
 .precio {
@@ -250,13 +254,15 @@ h3 {
 
 }
 
-.card, .regalo, .seguridad {
+.card,
+.regalo,
+.seguridad {
     font-size: 2em;
     background-color: white;
     color: #0044AA;
     height: 40px;
     width: 40px;
-  
+
 }
 
 footer article div {
@@ -274,7 +280,7 @@ footer article div {
 
 .copy {
     font-size: 20px;
-    font-weight: normal ;
+    font-weight: normal;
 
 }
 
@@ -298,6 +304,11 @@ footer article div {
     header nav {
         display: flex;
         justify-content: space-between;
+    }
+
+    .logo {
+        width: 50%;
+        padding: 10px;
     }
 
     .menu-hamburguesa {
@@ -329,7 +340,7 @@ footer article div {
     main section div {
         display: flex;
         flex-direction: row;
-        flex-wrap:wrap;
+        flex-wrap: wrap;
         justify-content: space-between;
         gap: 5px;
     }
@@ -338,13 +349,21 @@ footer article div {
     .discount {
         width: 50%;
     }
-    
+
     .pay {
         display: flex;
         justify-content: space-between;
     }
 
-    
+    .buscar {
+        width: 50%;
+    }
+
+    .enviar {
+        width: 50%;
+    }
+
+
 
 }
 
@@ -358,10 +377,10 @@ footer article div {
         height: 20px;
     }
 
-    .productos{
+    .productos {
         display: flex;
         justify-content: space-between;
-               
+
     }
 
     main section article {
@@ -372,15 +391,27 @@ footer article div {
     }
 
     .nav-header-menu {
-    display: initial;
-    justify-content: flex-start;
-    text-align: center;
-    height: 20px;
+        display: initial;
+        justify-content: flex-start;
+        text-align: center;
+        height: 20px;
 
     }
 
+    .logo {
+        width: 20%;
+    }
+
+    .enviar {
+        width: 18px;
+    }
+
+    .buscar {
+        width: 50%;
+    }
+
     .menu-hamburguesa {
-    display: none;
+        display: none;
 
     }
 
