--- a/views/login.html
+++ b/views/login.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ingresar</title>
+    <title>Registrate</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/fa7f7269a5.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="css/styles.log.css" />
 </head>
+
 <body>
-    
-</body>
-</html>
+    <header>
+        <div class="top-header">
+            <div class="logo">
+                <h5><img src="images/logo-mercado-liebre.svg" alt="logo mercado liebre"></h5>
+            </div>
+    </header>
+    <main>
+        <div>
+
+        </div>
+    </main>
+
+
+
+    #0022AA
