--- a/public/css/styles.log.css
+++ b/public/css/styles.log.css
@@ -4,16 +4,231 @@
     box-sizing: border-box;
 }
 
+/*MOBILE*/
+
 body {
-    background-color: #EAC926;
     font-family: 'Roboto', sans-serif;
+    background-color: #ebebeb;
 }
 
-header{
-    height: 90px;
+h3 {
+    font-size: 24px;
+    margin: 10px;
+}
+
+p {
+    font-size: 12px;
+}
+
+/*Header */
+header {
+    background-color: #EAC926;
+}
+
+.top-header {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 2%;
+    width: 100%;
 }
 
 .logo {
-    width: 40%;
-    padding-top: 10px;
+    width: 30%;
+    padding: 10px;
 }
+
+.form {
+    display: flex;
+    align-items: center;
+    padding: 2px;
+    width: 500px;
+}
+
+.buscar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #333;
+    font-size: 16px;
+    background-color: #fff;
+    display: flex;
+    height: 40px;
+    width: 70%;
+    border: solid 1.5px black
+}
+
+.enviar {
+    display: flex;
+    font-size: 16px;
+    background-color: #FFF;
+    height: 30px;
+    width: 20%;
+    border: solid 1.5px #666
+}
+
+header div.top-header p {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
+    font-style: bold;
+    font-size: 18px;
+    justify-content: center;
+    align-content: center;
+}
+
+header nav {
+    font-size: 16px;
+    margin-left: 20px;
+    padding-bottom: 5px;
+}
+
+.nav-menu-item {
+    justify-content: flex-start;
+    height: 20px;
+    display: none;
+
+}
+
+.nav-header-menu {
+    height: 20px;
+    display: none;
+    padding-right: 15px;
+
+}
+
+ul li {
+    list-style-type: none;
+    display: none;
+}
+
+ul li a {
+    text-decoration: none;
+    color: #000;
+    font-style: normal;
+    font-weight: bold;
+    justify-content: space-between;
+    display: none;
+}
+
+.menu-hamburguesa {
+    display: flex;
+    text-align: center;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.burguer {
+    display: block;
+    align-self: center;
+    background-color: #0044AA;
+    border-radius: 5px;
+    color: #FFF;
+    font-size: 20px;
+    height: 40px;
+    padding: 10px;
+    width: 40px;
+
+}
+
+section.banner img {
+    width: 100%;
+}
+
+/*Footer*/
+
+footer {
+    background-color: #fff;
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    margin: 90px;
+
+}
+
+footer i .card {
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+h3 {
+    font-size: 20px;
+    font-weight: bold;
+    justify-content: center;
+    text-align: center;
+
+}
+
+.card,
+.regalo,
+.seguridad {
+    font-size: 2em;
+    background-color: white;
+    color: #0044AA;
+    height: 40px;
+    width: 40px;
+
+}
+
+footer article div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.text {
+    font-size: 16px;
+    justify-content: center;
+    text-align: center;
+    padding: 10px;
+}
+
+.copy {
+    font-size: 20px;
+    font-weight: normal;
+
+}
+
+
+/* Tablet */
+
+@media (min-width: 666px){
+    .nav-menu-item {
+        display: initial;
+        justify-content: flex-start;
+        text-align: center;
+        height: 20px;
+    }
+
+    .nav-header-menu {
+        display: initial;
+        justify-content: flex-start;
+        text-align: center;
+        height: 20px;
+    }
+
+    header nav {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .menu-hamburguesa {
+        display: none;
+    }
+
+    ul li a {
+        display: initial;
+    }
+
+    ul li {
+        display: initial;
+    }
+}
+
+/* Desktop */ 
+
+@media (min-width: 992px){
+
+}
+
