--- a/public/css/styles.rgtr.css
+++ b/public/css/styles.rgtr.css
@@ -6,8 +6,16 @@
 }
 
 body {
-    background-color: #EAC926;
+    background-color: #ebebeb;
     font-family: 'Roboto', sans-serif;
+}
+
+main {
+    background-color: white;
+    margin: 40px;
+    padding: 25px;
+    border: 2px solid #666;
+    border-radius: 20px;
 }
 
 header{
@@ -15,29 +23,29 @@ header{
 }
 
 .logo {
-    width: 40%;
+    width: 35%;
     padding-top: 10px;
 }
 
 h1 {
-    
+    border-radius: 10px;
     text-align: center;
     font-style: bold;
+    display: block;
+    justify-content: space-around;
 }
 
 h3.titulo {
     padding: 15px;
     font-style: normal;
     font-weight: bold;
-    background-color: #EAC926;
-    
+        
 }
 
 .formulario-de-registro {
-    background-color: #ebebeb;
     padding: 10px 5px 10px 5px;
     margin: 20px 30px;
-    border-radius: 3%;
+    border-radius: 20px;
 
 }
 
@@ -45,7 +53,6 @@ h3.titulo {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    background-color: #ebebeb;
     padding: 10px 5px 10px 5px;
     margin: 20px 30px;
     border-radius: 3%;
@@ -53,7 +60,8 @@ h3.titulo {
 
 .elegir {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
+
     text-align: left;
     font-size: 16px;
 }
@@ -65,6 +73,59 @@ h3.titulo {
 
 .bottom {
     background-color: #ebebeb;
+
+}
+
+/*Footer*/
+
+footer {
+    background-color: #fff;
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    margin: 90px;
+
+}
+
+footer i .card {
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+h3 {
+    font-size: 20px;
+    font-weight: bold;
+    justify-content: center;
+    text-align: center;
+
+}
+
+.card,
+.regalo,
+.seguridad {
+    font-size: 2em;
+    background-color: white;
+    color: #0044AA;
+    height: 40px;
+    width: 40px;
+
+}
+
+footer article div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.text {
+    font-size: 16px;
+    justify-content: center;
+    text-align: center;
+    padding: 10px;
+}
+
+.copy {
+    font-size: 20px;
+    font-weight: normal;
 
 }
 
