modificaciones en register y login de nuevo

--- a/public/css/styles.log.css
+++ b/public/css/styles.log.css
@@ -137,6 +137,18 @@ section.banner img {
     width: 100%;
 }
 
+
+form {
+    line-height: 30px;
+    background-color: #ebebeb;
+    text-align: center;
+}
+
+button {
+    background-color: #ebebeb;
+    color: #0044AA;
+}
+
 /*Footer*/
 
 footer {
