--- a/views/login.html
+++ b/views/login.html
@@ -63,5 +63,33 @@
                 </form>
             </main>
         </section>
+        <footer>
+            <section>
+                <div>
+                    <article class="pay">
+                        <div>
+                            <i class="card fa-solid fa-credit-card"></i>
+                            <h3 class="paga">Pagá con tarjeta o en efectivo</h3>
+                            <p class="text">Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o
+                                efectivo en puntos de pago. ¡Y siempre es Seguro!</p>
+                        </div>
+                        <div>
+                            <i class="regalo fa-solid fa-gift"></i>
+                            <h3>Envio gratis desde los $2500</h3>
+                            <p class="text">Solo por estar registrad@ en MercadoLiebre tenés envíos gratis en
+                                miles de productos. Es un beneficio de MercadoPuntos</p>
+                        </div>
+                        <div>
+                            <i class="seguridad fa-solid fa-user-shield"></i>
+                            <h3>Seguridad de Principio a fin</h3>
+                            <p class="text">¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer
+                                por que siempre estas protegid@</p>
+                        </div>
+                    </article>
+                </div>
+                <p class="copy">Copyrigth 1999-2000 Mercadoliebre S.R.L</p>
+                </article>
+            </section>
+        </footer>
 
 </header>
