--- a/public/css/styles.rgtr.css
+++ b/public/css/styles.rgtr.css
@@ -16,6 +16,7 @@ main {
     padding: 25px;
     border: 2px solid #666;
     border-radius: 20px;
+    max-width: fit-content;
 }
 
 header{
@@ -43,27 +44,28 @@ h3.titulo {
 }
 
 .formulario-de-registro {
+    border: 5px solid #EAC926;
     padding: 10px 5px 10px 5px;
     margin: 20px 30px;
     border-radius: 20px;
-
 }
 
 .perfil-del-usuario {
-    display: flex;
-    flex-direction: row;
+    border: 5px solid #EAC926;
     flex-wrap: wrap;
     padding: 10px 5px 10px 5px;
     margin: 20px 30px;
-    border-radius: 3%;
+    border-radius: 20px;
+    line-height: 3px;
 }
 
 .elegir {
+    border: 5px solid #EAC926;
     display: flex;
     flex-direction: column-reverse;
-
     text-align: left;
     font-size: 16px;
+    border-radius: 20px;
 }
 
 .checkbox {
@@ -71,8 +73,11 @@ h3.titulo {
     flex-wrap: wrap;
 }
 
-.bottom {
-    background-color: #ebebeb;
+.submit {
+    display: flex;
+    background-color: #0044AA;
+    color: #ebebeb;
+    justify-content: center;
 
 }
 
@@ -132,6 +137,14 @@ footer article div {
 /* Tablet */
 
 @media (min-width: 576px){
+    main {
+    background-color: white;
+    margin: 40px;
+    padding: 25px;
+    border: 2px solid #666;
+    border-radius: 20px;
+    max-width: fit-content;
+}
 
 }
 
