--- a/views/register.html
+++ b/views/register.html
@@ -59,9 +59,10 @@
             </p>
         </div>
         <section class="perfil-del-usuario">
-            <label>¿Cual es tu perfil?</label>
-            <input type="radio" name="comprador" value="comprador">Comprador
-            <input type="radio" name="vendedor" value="cendedor">Vendedor
+            <input type="radio" name="comprador" value="comprador">
+            <label>Comprador</label>
+            <input type="radio" name="vendedor" value="cendedor">
+            <label>Vendedor</label>
         </section>
         <div>
             <p>
@@ -69,7 +70,7 @@
             </p>
         </div>
         <section class="elegir">
-            <label>¿Cuales son tus intereses?</label>
+            <label></label>
             <input type="checkbox" name="intereses" value="intereses">Electro
             <input type="checkbox" name="intereses" value="intereses">Moda
             <input type="checkbox" name="intereses" value="intereses">Hogar
@@ -85,11 +86,40 @@
             <label for="password">password</label>
             <input type="password" name="password" id="password" required>
         </p>
-        <a href="/">
-            <bottom type="bottom">Enviar</bottom>
-        </a>
+        </div>
+        <button type="submit" class="login">
+            <a href="/">Enviar</a>
+        </button>
         </form>
     </main>
+    <footer>
+        <section>
+            <div>
+                <article class="pay">
+                    <div>
+                        <i class="card fa-solid fa-credit-card"></i>
+                        <h3 class="paga">Pagá con tarjeta o en efectivo</h3>
+                        <p class="text">Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o
+                            efectivo en puntos de pago. ¡Y siempre es Seguro!</p>
+                    </div>
+                    <div>
+                        <i class="regalo fa-solid fa-gift"></i>
+                        <h3>Envio gratis desde los $2500</h3>
+                        <p class="text">Solo por estar registrad@ en MercadoLiebre tenés envíos gratis en
+                            miles de productos. Es un beneficio de MercadoPuntos</p>
+                    </div>
+                    <div>
+                        <i class="seguridad fa-solid fa-user-shield"></i>
+                        <h3>Seguridad de Principio a fin</h3>
+                        <p class="text">¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer
+                            por que siempre estas protegid@</p>
+                    </div>
+                </article>
+            </div>
+            <p class="copy">Copyrigth 1999-2000 Mercadoliebre S.R.L</p>
+            </article>
+        </section>
+    </footer>
 </body>
 
 </html>
