--- a/views/home.html
+++ b/views/home.html
@@ -127,7 +127,7 @@
                         <i class="camion fas fa-truck"></i>
                         <p class="precio">$23.200</p>
                         <p class="descuento">5% off</p>
-                        <h4 class="descripcion">SmartTv Samsung 43"</h4>
+                        <h4 class="descripcion">SmartTv Samsung 43."</h4>
                     </div>
                 </article>
             </div>
