--- a/views/home.html
+++ b/views/home.html
@@ -15,7 +15,7 @@
         <body>
         <div class="top-header">
             <div class="logo">
-                <h5><img src="images/logo-mercado-liebre.svg" alt="logo mercado liebre"></h5>
+                <h5><img src="Images/logo-mercado-liebre.svg" alt="logo mercado liebre"></h5>
             </div>
             <div class="form" action="#" method="GET">
                 <div class="buscar">Buscar productos, marcas y más</div>
@@ -41,7 +41,7 @@
         </div>
     </header>
     <section class="banner">
-        <img src="images/img-home-banner.jpg" alt="Banner de ofertas">
+        <img src="Images/img-home-banner.jpg" alt="Banner de ofertas">
     </section>
     <main>
         <section class="ultima-visita">
