--- a/public/css/styles.rgtr.css
+++ b/public/css/styles.rgtr.css
@@ -11,13 +11,23 @@ body {
 }
 
 main {
-    background-color: white;
-    margin: 40px;
+    display: block;
+    background-color: #ebebeb;
+    margin: auto;
+    width: 90 vw;
     padding: 25px;
     border: 2px solid #666;
     border-radius: 20px;
-    max-width: fit-content;
+    max-width: 1200px;
+    margin-bottom: 15px;;
 }
+
+.create-form {
+    padding: 20px 15px;
+    max-width: 900px;
+    margin: auto;
+}
+
 
 header{
     height: 90px;
