--- a/views/register.html
+++ b/views/register.html
@@ -27,31 +27,32 @@
             <p>
             <h3 class="titulo">Formulario de registro</h3>
             </p>
-            <div class="formulario-de-registro">
-                <p class="name">
-                    <label for="nombre">Nombre y Apellido</label>
-                    <input type="text" name="nombre" id="nombre" required>
-                </p>
-                <p class="user">
-                    <label for="usuario">Nombre de usuario</label>
-                    <input type="text" name="usuario" id="usuario" required>
-                </p>
-                <p class="mail">
-                    <label for="email">e-mail</label>
-                    <input type="email" name="email" id="email" required>
-                </p>
-                <p>
-                    </section>
-                    <secction>
-                        <label for="fecha nacimiento">Fecha de nacimiento</label>
-                        <input type="date" name="fecha nacimiento" id="fecha nacimiento" required>
+            <section class="create-form">
+                <div class="formulario-de-registro">
+                    <p class="name">
+                        <label for="nombre">Nombre y Apellido</label>
+                        <input type="text" name="nombre" id="nombre" required>
+                    </p>
+                    <p class="user">
+                        <label for="usuario">Nombre de usuario</label>
+                        <input type="text" name="usuario" id="usuario" required>
+                    </p>
+                    <p class="mail">
+                        <label for="email">e-mail</label>
+                        <input type="email" name="email" id="email" required>
+                    </p>
+                    <p>
+            </section>
+            <secction>
+                <label for="fecha nacimiento">Fecha de nacimiento</label>
+                <input type="date" name="fecha nacimiento" id="fecha nacimiento" required>
                 </p>
                 <p>
                     <label for="domicilio">Domicilio</label>
                     <input type="text" name="domicilio" id="domicilio" required>
                 </p>
-                </secction>
-            </div>
+                </section>
+        </div>
         </div>
         <div>
             <p>
