--- a/views/home.html
+++ b/views/home.html
@@ -12,16 +12,19 @@
 </head>
 
 <header>
-        <body>
+
+    <body>
         <div class="top-header">
             <div class="logo">
                 <h5><img src="Images/logo-mercado-liebre.svg" alt="logo mercado liebre"></h5>
             </div>
-            <div class="form" action="#" method="GET">
-                <div class="buscar">Buscar productos, marcas y más</div>
-                <div class="enviar"><i class="fa fa-search"></i></div>
+            <div class="search-nav" action="#" method="GET">
+                <input type=text placeholder="Buscar productos, marcas y mas">
+                <a href="#" targe="_blank"><i class="fa fa-search"></i></a>
             </div>
-            <p><i class="manito fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
+            <div>
+                <p><i class="manito fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
+            </div>
         </div>
         <nav>
             <ul class="nav-menu-item">
@@ -39,128 +42,126 @@
         <div class="menu-hamburguesa">
             <i class="burguer fa fa-bars burger"></i>
         </div>
-    </header>
-    <section class="banner">
-        <img src="Images/img-home-banner.jpg" alt="Banner de ofertas">
-    </section>
-    <main>
-        <section class="ultima-visita">
-            <h3>Basado en tu última visita</h3>
-            <div class="productos">
-                <article>
-                    <img class="foto-articulo" src="Images/img-cafetera-moulinex.jpg" alt="Cafetera"
-                        class="product_img">
-                    <div class="leyenda-articulo">
-                        <i class="camion fas fa-truck"></i>
-                        <p class="precio">$6.770</p>
-                        <p class="descuento">40% off</p>
-                        <h4 class="descripcion">Cafetera Moulinex</h4>
-                    </div>
-                </article>
-                <article>
-                    <img class="foto-articulo" src="Images/img-macbook-pro-2019.jpg" alt="MacBook" class="product_img">
-                    <div class="leyenda-articulo">
-                        <i class="camion fas fa-truck"></i>
-                        <p class="precio">$230.000</p>
-                        <p class="descuento">20% off</p>
-                        <h4 class="descripcion">MacBook Pro 2019</h4>
-                    </div>
-                </article>
-                <article>
-                    <img class="foto-articulo" src="Images/img-samsung-galaxy-s10.jpg"
-                        alt="Teléfono Móvil Samsung Galaxy" class="product_img">
-                    <div class="leyenda-articulo">
-                        <i class="camion fas fa-truck"></i>
-                        <p class="precio">$70.500</p>
-                        <p class="descuento">10% off</p>
-                        <h4 class="descripcion">Samsung Galaxy S10</h4>
-                    </div>
-                </article>
-                <article>
-                    <img class="foto-articulo" src="Images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung"
-                        class="product_img">
-                    <div class="leyenda-articulo">
-                        <i class="camion fas fa-truck"></i>
-                        <p class="precio">$23.200</p>
-                        <p class="descuento">5% off</p>
-                        <h4 class="descripcion">SmartTv Samsung 43"</h4>
-                    </div>
-                </article>
-            </div>
-        </section>
-        <section class="offers">
-            <h3>Ofertas</h3>
-            <div class="productos">
-                <article class="caf">
-                    <img class="foto-articulo" src="Images/img-cafetera-moulinex.jpg" alt="Cafetera"
-                        class="product_img">
-                    <div class="leyenda-articulo">
-                        <i class="camion fas fa-truck"></i>
-                        <p class="precio">$6.770</p>
-                        <p class="descuento">40% off</p>
-                        <h4 class="descripcion">Cafetera Moulinex</h4>
-                    </div>
-                </article>
-                <article class="compu">
-                    <img class="foto-articulo" src="Images/img-macbook-pro-2019.jpg" alt="MacBook" class="product_img">
-                    <div class="leyenda-articulo">
-                        <i class="camion fas fa-truck"></i>
-                        <p class="precio">$230.000</p>
-                        <p class="descuento">20% off</p>
-                        <h4 class="descripcion">MacBook Pro 2019</h4>
-                    </div>
-                </article>
-                <article class="mobile">
-                    <img class="foto-articulo" src="Images/img-samsung-galaxy-s10.jpg"
-                        alt="Teléfono Móvil Samsung Galaxy" class="product_img">
-                    <div class="leyenda-articulo">
-                        <i class="camion fas fa-truck"></i>
-                        <p class="precio">$70.500</p>
-                        <p class="descuento">10% off</p>
-                        <h4 class="descripcion">Samsung Galaxy S10</h4>
-                    </div>
-                </article>
-                <article class="tv">
-                    <img class="foto-articulo" src="Images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung"
-                        class="product_img">
-                    <div class="leyenda-articulo">
-                        <i class="camion fas fa-truck"></i>
-                        <p class="precio">$23.200</p>
-                        <p class="descuento">5% off</p>
-                        <h4 class="descripcion">SmartTv Samsung 43."</h4>
-                    </div>
-                </article>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <section>
-            <div>
-                <article class="pay">
-                    <div>
-                        <i class="card fa-solid fa-credit-card"></i>
-                        <h3 class="paga">Pagá con tarjeta o en efectivo</h3>
-                        <p class="text">Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o
-                            efectivo en puntos de pago. ¡Y siempre es Seguro!</p>
-                    </div>
-                    <div>
-                        <i class="regalo fa-solid fa-gift"></i>
-                        <h3>Envio gratis desde los $2500</h3>
-                        <p class="text">Solo por estar registrad@ en MercadoLiebre tenés envíos gratis en
-                            miles de productos. Es un beneficio de MercadoPuntos</p>
-                    </div>
-                    <div>
-                        <i class="seguridad fa-solid fa-user-shield"></i>
-                        <h3>Seguridad de Principio a fin</h3>
-                        <p class="text">¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer
-                            por que siempre estas protegid@</p>
-                    </div>
-                </article>
-            </div>
-            <p class="copy">Copyrigth 1999-2000 Mercadoliebre S.R.L</p>
+</header>
+<section class="banner">
+    <img src="Images/img-home-banner.jpg" alt="Banner de ofertas">
+</section>
+<main>
+    <section class="ultima-visita">
+        <h3>Basado en tu última visita</h3>
+        <div class="productos">
+            <article>
+                <img class="foto-articulo" src="Images/img-cafetera-moulinex.jpg" alt="Cafetera" class="product_img">
+                <div class="leyenda-articulo">
+                    <i class="camion fas fa-truck"></i>
+                    <p class="precio">$6.770</p>
+                    <p class="descuento">40% off</p>
+                    <h4 class="descripcion">Cafetera Moulinex</h4>
+                </div>
             </article>
-        </section>
-    </footer>
+            <article>
+                <img class="foto-articulo" src="Images/img-macbook-pro-2019.jpg" alt="MacBook" class="product_img">
+                <div class="leyenda-articulo">
+                    <i class="camion fas fa-truck"></i>
+                    <p class="precio">$230.000</p>
+                    <p class="descuento">20% off</p>
+                    <h4 class="descripcion">MacBook Pro 2019</h4>
+                </div>
+            </article>
+            <article>
+                <img class="foto-articulo" src="Images/img-samsung-galaxy-s10.jpg" alt="Teléfono Móvil Samsung Galaxy"
+                    class="product_img">
+                <div class="leyenda-articulo">
+                    <i class="camion fas fa-truck"></i>
+                    <p class="precio">$70.500</p>
+                    <p class="descuento">10% off</p>
+                    <h4 class="descripcion">Samsung Galaxy S10</h4>
+                </div>
+            </article>
+            <article>
+                <img class="foto-articulo" src="Images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung"
+                    class="product_img">
+                <div class="leyenda-articulo">
+                    <i class="camion fas fa-truck"></i>
+                    <p class="precio">$23.200</p>
+                    <p class="descuento">5% off</p>
+                    <h4 class="descripcion">SmartTv Samsung 43"</h4>
+                </div>
+            </article>
+        </div>
+    </section>
+    <section class="offers">
+        <h3>Ofertas</h3>
+        <div class="productos">
+            <article class="caf">
+                <img class="foto-articulo" src="Images/img-cafetera-moulinex.jpg" alt="Cafetera" class="product_img">
+                <div class="leyenda-articulo">
+                    <i class="camion fas fa-truck"></i>
+                    <p class="precio">$6.770</p>
+                    <p class="descuento">40% off</p>
+                    <h4 class="descripcion">Cafetera Moulinex</h4>
+                </div>
+            </article>
+            <article class="compu">
+                <img class="foto-articulo" src="Images/img-macbook-pro-2019.jpg" alt="MacBook" class="product_img">
+                <div class="leyenda-articulo">
+                    <i class="camion fas fa-truck"></i>
+                    <p class="precio">$230.000</p>
+                    <p class="descuento">20% off</p>
+                    <h4 class="descripcion">MacBook Pro 2019</h4>
+                </div>
+            </article>
+            <article class="mobile">
+                <img class="foto-articulo" src="Images/img-samsung-galaxy-s10.jpg" alt="Teléfono Móvil Samsung Galaxy"
+                    class="product_img">
+                <div class="leyenda-articulo">
+                    <i class="camion fas fa-truck"></i>
+                    <p class="precio">$70.500</p>
+                    <p class="descuento">10% off</p>
+                    <h4 class="descripcion">Samsung Galaxy S10</h4>
+                </div>
+            </article>
+            <article class="tv">
+                <img class="foto-articulo" src="Images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung"
+                    class="product_img">
+                <div class="leyenda-articulo">
+                    <i class="camion fas fa-truck"></i>
+                    <p class="precio">$23.200</p>
+                    <p class="descuento">5% off</p>
+                    <h4 class="descripcion">SmartTv Samsung 43."</h4>
+                </div>
+            </article>
+        </div>
+    </section>
+</main>
+<footer>
+    <section>
+        <div>
+            <article class="pay">
+                <div>
+                    <i class="card fa-solid fa-credit-card"></i>
+                    <h3 class="paga">Pagá con tarjeta o en efectivo</h3>
+                    <p class="text">Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o
+                        efectivo en puntos de pago. ¡Y siempre es Seguro!</p>
+                </div>
+                <div>
+                    <i class="regalo fa-solid fa-gift"></i>
+                    <h3>Envio gratis desde los $2500</h3>
+                    <p class="text">Solo por estar registrad@ en MercadoLiebre tenés envíos gratis en
+                        miles de productos. Es un beneficio de MercadoPuntos</p>
+                </div>
+                <div>
+                    <i class="seguridad fa-solid fa-user-shield"></i>
+                    <h3>Seguridad de Principio a fin</h3>
+                    <p class="text">¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer
+                        por que siempre estas protegid@</p>
+                </div>
+            </article>
+        </div>
+        <p class="copy">Copyrigth 1999-2000 Mercadoliebre S.R.L</p>
+        </article>
+    </section>
+</footer>
 </body>
 
 </html>
