--- a/views/home.html
+++ b/views/home.html
@@ -20,7 +20,8 @@
             </div>
             <div class="search-nav" action="#" method="GET">
                 <input type=text placeholder="Buscar productos, marcas y mas">
-                <a href="#" targe="_blank"><i class="fa fa-search"></i></a>
+                <button type="button"> <i class="fa fa-search"></i></button>
+                <a href="#" targe="_blank"></a>
             </div>
             <div>
                 <p><i class="manito fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
