--- a/views/register.html
+++ b/views/register.html
@@ -9,138 +9,140 @@
     <script src="https://kit.fontawesome.com/fa7f7269a5.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="css/styles.rgtr.css" />
-    
+
 </head>
-<body>
-    <header>
-            <div class="top-header">
-                <div class="logo">
-                    <h5><img src="Images/logo-mercado-liebre.svg" alt="logo mercado liebre"></h5>
-                </div>
-                <div class="search-nav" action="#" method="GET">
-                    <input type=text placeholder="Buscar productos, marcas y mas" class="input-search-nav">
-                    <a href="#" targe="_blank"><i class="fa fa-search"></i></a>
-                </div>
-                <div>
-                    <p><i class="manito fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
-                </div>
+<header>
+
+    <body>
+        <div class="top-header">
+            <div class="logo">
+                <h5><img src="Images/logo-mercado-liebre.svg" alt="logo mercado liebre"></h5>
             </div>
-            <nav>
-                <ul class="nav-menu-item">
-                    <li><a href="#">Ofertas |</a></li>
-                    <li><a href="#">Tiendas Oficiales |</a></li>
-                    <li><a href="#">Vender |</a></li>
-                    <li><a href="#">Ayuda |</a></li>
-                </ul>
-                <ul class="nav-header-menu">
-                    <li><a href="/register">Creá tu cuenta |<i class="tarjta far fa-id-card"></i></a></li>
-                    <li><a href="/login">Ingresá |<i class="signo fas fa-sign-in-alt"></i></a></li>
-                    <li><a href="#">Mis compras |<i class="shop fas fa-shopping-basket"></i></a></li>
-                </ul>
-            </nav>
-            <div class="menu-hamburguesa">
-                <i class="burguer fa fa-bars burger"></i>
+            <div class="search-nav" action="#" method="GET">
+                <input type=text placeholder="Buscar productos, marcas y mas">
+                <button type="button"> <i class="fa fa-search"></i></button>
+                <a href="#" targe="_blank"></a>
             </div>
-    </header>
-    <main>
-        <div>
-            <section>
-                <h1>Crea tu cuenta</h1>
-                <form action="resultado.html" method="POST">
-            </section>
-            <p>
-            <h3 class="titulo">Formulario de registro</h3>
-            </p>
-            <section class="create-form">
-                <div class="formulario-de-registro">
-                    <p class="name">
-                        <label for="nombre">Nombre y Apellido</label>
-                        <input type="text" name="nombre" id="nombre" required>
-                    </p>
-                    <p class="user">
-                        <label for="usuario">Nombre de usuario</label>
-                        <input type="text" name="usuario" id="usuario" required>
-                    </p>
-                    <p class="mail">
-                        <label for="email">e-mail</label>
-                        <input type="email" name="email" id="email" required>
-                    </p>
-                    <p>
+            <div>
+                <p><i class="manito fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
+            </div>
+        </div>
+        <nav>
+            <ul class="nav-menu-item">
+                <li><a href="#">Ofertas |</a></li>
+                <li><a href="#">Tiendas Oficiales |</a></li>
+                <li><a href="#">Vender |</a></li>
+                <li><a href="#">Ayuda |</a></li>
+            </ul>
+            <ul class="nav-header-menu">
+                <li><a href="/register">Creá tu cuenta |<i class="tarjta far fa-id-card"></i></a></li>
+                <li><a href="/login">Ingresá |<i class="signo fas fa-sign-in-alt"></i></a></li>
+                <li><a href="#">Mis compras |<i class="shop fas fa-shopping-basket"></i></a></li>
+            </ul>
+        </nav>
+        <div class="menu-hamburguesa">
+            <i class="burguer fa fa-bars burger"></i>
+        </div>
+</header>
+<main>
+    <div>
+        <section>
+            <h1>Crea tu cuenta</h1>
+            <form action="resultado.html" method="POST">
+        </section>
+        <p>
+        <h3 class="titulo">Formulario de registro</h3>
+        </p>
+        <section class="create-form">
+            <div class="formulario-de-registro">
+                <p class="name">
+                    <label for="nombre">Nombre y Apellido</label>
+                    <input type="text" name="nombre" id="nombre" required>
+                </p>
+                <p class="user">
+                    <label for="usuario">Nombre de usuario</label>
+                    <input type="text" name="usuario" id="usuario" required>
+                </p>
+                <p class="mail">
+                    <label for="email">e-mail</label>
+                    <input type="email" name="email" id="email" required>
+                </p>
+                <p>
                     <label for="fecha nacimiento">Fecha de nacimiento</label>
-                <input type="date" name="fecha nacimiento" id="fecha nacimiento" required>
+                    <input type="date" name="fecha nacimiento" id="fecha nacimiento" required>
                 </p>
                 <p>
                     <label for="domicilio">Domicilio</label>
                     <input type="text" name="domicilio" id="domicilio" required>
                 </p>
-                </section>
-        </div>
-        </div>
-        <div>
-            <p>
-            <h3 class="titulo">Perfil del Usuario</h3>
-            </p>
-        </div>
-        <section class="perfil-del-usuario">
-            <input type="radio" name="comprador" value="comprador">
-            <label>Comprador</label>
-            <input type="radio" name="vendedor" value="cendedor">
-            <label>Vendedor</label>
         </section>
-        <div>
-            <p>
-            <h3 class="titulo">Intereses</h3>
-            </p>
-        </div>
-        <section class="elegir">
-            <label></label>
-            <input type="checkbox" name="intereses" value="intereses">Electro
-            <input type="checkbox" name="intereses" value="intereses">Moda
-            <input type="checkbox" name="intereses" value="intereses">Hogar
-            <input type="checkbox" name="intereses" value="intereses">Jugueteria
-            <input type="checkbox" name="intereses" value="intereses">Vida sana
-        </section>
-        <div>
-            <p>
-            <h3 class="titulo">Contraseña</h3>
-            </p>
-        </div>
+    </div>
+    </div>
+    <div>
         <p>
-            <label for="password">password</label>
-            <input type="password" name="password" id="password" required>
+        <h3 class="titulo">Perfil del Usuario</h3>
         </p>
-        </div>
-        <button type="button" class="btn btn-primary">Enviar</button>
-        </form>
-    </main>
-    <footer>
-        <section>
-            <div>
-                <article class="pay">
-                    <div>
-                        <i class="card fa-solid fa-credit-card"></i>
-                        <h3 class="paga">Pagá con tarjeta o en efectivo</h3>
-                        <p class="text">Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o
-                            efectivo en puntos de pago. ¡Y siempre es Seguro!</p>
-                    </div>
-                    <div>
-                        <i class="regalo fa-solid fa-gift"></i>
-                        <h3>Envio gratis desde los $2500</h3>
-                        <p class="text">Solo por estar registrad@ en MercadoLiebre tenés envíos gratis en
-                            miles de productos. Es un beneficio de MercadoPuntos</p>
-                    </div>
-                    <div>
-                        <i class="seguridad fa-solid fa-user-shield"></i>
-                        <h3>Seguridad de Principio a fin</h3>
-                        <p class="text">¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer
-                            por que siempre estas protegid@</p>
-                    </div>
-                </article>
-            </div>
-            <p class="copy">Copyrigth 1999-2000 Mercadoliebre S.R.L</p>
+    </div>
+    <section class="perfil-del-usuario">
+        <input type="radio" name="comprador" value="comprador">
+        <label>Comprador</label>
+        <input type="radio" name="vendedor" value="cendedor">
+        <label>Vendedor</label>
+    </section>
+    <div>
+        <p>
+        <h3 class="titulo">Intereses</h3>
+        </p>
+    </div>
+    <section class="elegir">
+        <label></label>
+        <input type="checkbox" name="intereses" value="intereses">Electro
+        <input type="checkbox" name="intereses" value="intereses">Moda
+        <input type="checkbox" name="intereses" value="intereses">Hogar
+        <input type="checkbox" name="intereses" value="intereses">Jugueteria
+        <input type="checkbox" name="intereses" value="intereses">Vida sana
+    </section>
+    <div>
+        <p>
+        <h3 class="titulo">Contraseña</h3>
+        </p>
+    </div>
+    <p>
+        <label for="password">password</label>
+        <input type="password" name="password" id="password" required>
+    </p>
+    </div>
+    <button class="enviar" type="button" class="btn btn-primary">Enviar</button>
+    </form>
+</main>
+<footer>
+    <section>
+        <div>
+            <article class="pay">
+                <div>
+                    <i class="card fa-solid fa-credit-card"></i>
+                    <h3 class="paga">Pagá con tarjeta o en efectivo</h3>
+                    <p class="text">Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o
+                        efectivo en puntos de pago. ¡Y siempre es Seguro!</p>
+                </div>
+                <div>
+                    <i class="regalo fa-solid fa-gift"></i>
+                    <h3>Envio gratis desde los $2500</h3>
+                    <p class="text">Solo por estar registrad@ en MercadoLiebre tenés envíos gratis en
+                        miles de productos. Es un beneficio de MercadoPuntos</p>
+                </div>
+                <div>
+                    <i class="seguridad fa-solid fa-user-shield"></i>
+                    <h3>Seguridad de Principio a fin</h3>
+                    <p class="text">¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer
+                        por que siempre estas protegid@</p>
+                </div>
             </article>
-        </section>
-    </footer>
+        </div>
+        <p class="copy">Copyrigth 1999-2000 Mercadoliebre S.R.L</p>
+        </article>
+    </section>
+</footer>
 </body>
 
 </html>
