--- a/views/login.html
+++ b/views/login.html
@@ -58,7 +58,7 @@
                         <input type="password" name="password" id="password" placeholder="********" required>
                     </div>
                     <button type="submit" class="login">
-                        <a href="/">Enviar</a>
+                        <a class="enviar" href="/">Enviar</a>
                     </button>
                 </form>
             </main>
@@ -91,5 +91,5 @@
                 </article>
             </section>
         </footer>
-
+    </body>
 </header>
